--- a/Trivia/Views/Home/Index.cshtml
+++ b/Trivia/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to the Trivia app!</h1>
+    <p>This is a simple game, utilizing <a href="https://the-trivia-api.com/">THE TRIVIA API</a> </p>
 </div>
 
 <div class="text-end">
